--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
     <head>
-        test123
+        hi, im hytic!
     </head>
+    <body>
+        <article>
+            shiit, it works!
+        </article>
+    </body>
 </html>
