--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
-        hi, im hytic!
+        <title>hytic</title>
     </head>
     <body>
         <article>
-            shiit, it works!
+            <header>
+                hi, im <em>hytic</em> and this is my <em>motherfucking website</em>
+            </header>
         </article>
     </body>
 </html>
